<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".activity_buscarFamiliar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/linearLayoutTitleRegister"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/colorWhite"
            android:color="@color/colorBlack"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.538"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/titleBuscarFamiliar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/titleBuscarFamiliar"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="30dp" />
        </LinearLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_gravity="center"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:textAlignment="center">

                <TextView
                    android:id="@+id/titleBuscarFamiliar2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_weight="1"
                    android:background="@color/colorWhite"
                    android:text="@string/buscarUsuario"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="50px" />

                <LinearLayout
                    android:id="@+id/linearLayoutPhoneBuscarFamiliar"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/shape"
                    android:textAlignment="center"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/InputEmailABuscar"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:ems="10"
                            android:hint="@string/mail_a_buscar"
                            android:inputType="textEmailAddress" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>


                <Button
                    android:id="@+id/buttonBuscarFamiliar"
                    android:layout_width="150dp"
                    android:layout_height="46dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/shapebutton"
                    android:text="@string/buscar"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/messageBuscar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:text="@string/no_tiene_cuenta"
                    android:textSize="18dp"/>

                <TextView
                    android:id="@+id/messageSignUpBuscar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/signUpBuscarFamiliar"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textSize="18dp"
                    android:textColor="@color/colorBlue" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>